eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/BAADecisionEngineMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C00228</description>
    <fields>
        <fullName>DoAML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C00228</description>
        <label>DoAML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C00228</description>
        <label>DoCredit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoSanction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C00228</description>
        <label>DoSanction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoSetUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C00233</description>
        <label>DoSetUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <description>C00228</description>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <description>C00228</description>
        <label>ProductCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BAA Decision Engine Matrix</label>
</CustomObject>